[gd_scene load_steps=6 format=2]

[ext_resource path="res://Shader/water_shader.tres" type="Shader" id=1]
[ext_resource path="res://Misc/CoinCounter.gd" type="Script" id=2]
[ext_resource path="res://Misc/gfx/numbers.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )

[node name="CoinCounter" type="Node2D"]
material = SubResource( 1 )
script = ExtResource( 2 )

[node name="ShowDuration" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
autostart = true

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 7, 7 )
[connection signal="timeout" from="ShowDuration" to="." method="_on_ShowDuration_timeout"]
